menu tab cropped height fix

--- a/style.css
+++ b/style.css
@@ -961,7 +961,7 @@ audio {
     box-shadow: none;
     margin: 0 ;
     padding: 0;
-    height: 61px !important;
+    height: 64px !important;
   }
   #search-container {
     display: flex;  
